# Pokemon

./: .gitignore  .gitignore_global  1827.dic  Listen.py  Poke.ipynb  Poke_test.py  Pokemon.py  Pokemon.txt  PokemonTypes.py  README.md  matchup.MD  pokemon.csv  pyproject.toml  requirements.txt  setup.py
data/: pokemon.csv
pocketsphinx/: 1827.dic  Poke_test.py
pocketsphinx/references/: Phoneme Pronunciations.txt  Pronunciations.txt
pokemon_nerd/: Listen.py  Pokemon.py  PokemonType.py  core.py  logic.py  paths.py
pokemon_nerd/data/: Pokemon.txt
pokemon_nerd/data/pocketsphinx/: 1827.dic
src/pokemon_nerd/: Listen.py  Pokemon.py
src/pokemon_nerd/data/pocketsphinx/: 1827.dic  1827.lm
src/pokemon_nerd/tests/: Poke_test.py
test/: Poke_test.py  Poke_test_results.txt
tests/: Poke_test.py
