[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pokemon-nerd"
version = "1.0.3"
description = "A nerdy Pokémon friend you can ask all your questions."
authors = ["Cyber Scholar <48360032+STARKBOND@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "pokemon_nerd" },
    { include = "tests" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
speechrecognition = "^3.8.1"
pyaudio = "^0.2.12"
pocketsphinx = "^5.0.0"

[tool.poetry.urls]
"Homepage" = "https://github.com/STARKBOND/Pokemon"
"Bug Tracker" = "https://github.com/STARKBOND/Pokemon/issues"
"History" = "https://github.com/STARKBOND/Pokemon/commits/main"
